fixed pom.xml issues